@@ -1,3 +1,4 @@
+Added empty pie after a filled pie
 # 0.00.19 (59488) Dec 20, 2011
 Fixed: a "zero" is not displayed for the "mixed" option.
 # 0.00.18 (59483) Dec 19, 2011
